# greenbox

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
docs/: getting_started.md
src/: __init__.py  controller.py  scheduler.py  sensors.py
src/cli/: __init__.py
tests/: __init__.py  conftest.py  test_controller.py
